--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "~3.3.2",
     "angular-busy": "~4.1.2",
     "modernizr": "~2.8.3",
-    "lodash": "~3.6.0"
+    "lodash": "~3.6.0",
+    "angular-translate": "^2.13.1"
   }
 }
