--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "florian.edelmaier@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "args": "^2.3.0",
     "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
