--- a/package.json
+++ b/package.json
@@ -20,33 +20,32 @@
   "author": "florian.edelmaier@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "args": "^2.3.0",
-    "body-parser": "^1.15.0",
-    "compression": "^1.6.1",
-    "cookie-parser": "^1.4.1",
-    "emailjs": "^0.3.13",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-jshint": "^1.9.2",
-    "gulp-ng-annotate": "^0.5.2",
-    "gulp-nodemon": "^1.0.5",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-uglify": "^1.1.0",
-    "html": "0.0.7",
-    "jshint-stylish": "^1.0.1",
-    "mongoose": "^3.8.24",
-    "mongoose-deep-populate": "^1.0.2",
-    "passport": "^0.2.2",
-    "passport-local": "^1.0.0",
-    "redis": "^2.6.5"
+    "args": "2.3.0",
+    "body-parser": "1.16.1",
+    "compression": "1.6.2",
+    "cookie-parser": "1.4.3",
+    "emailjs": "0.3.13",
+    "express": "4.14.1",
+    "express-session": "1.15.1",
+    "mongoose": "4.8.5",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "redis": "2.6.5"
   },
   "devDependencies": {
-    "expect": "^1.14.0",
-    "gulp-angular-gettext": "^2.1.0",
-    "mocha": "^2.4.5",
-    "supertest": "^1.2.0",
-    "supertest-session": "^2.0.1"
+    "expect": "1.20.2",
+    "expect-express": "1.1.2",
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.1",
+    "gulp-jshint": "2.0.4",
+    "gulp-ng-annotate": "2.0.0",
+    "gulp-nodemon": "2.2.1",
+    "gulp-sourcemaps": "2.4.1",
+    "gulp-uglify": "2.0.1",
+    "jshint": "2.9.4",
+    "jshint-stylish": "2.2.1",
+    "mocha": "3.2.0",
+    "supertest": "3.0.0",
+    "supertest-session": "3.0.0"
   }
 }
