--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "args": "2.3.0",
     "body-parser": "1.16.1",
+    "chalk": "2.3.2",
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
     "emailjs": "0.3.13",
