--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "4.14.1",
     "express-session": "1.15.1",
     "moment": "2.20.1",
+    "moment-range": "3.1.1",
     "mongoose": "4.8.5",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
