--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "4.8.5",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
+    "pdfkit": "0.10.0",
     "redis": "2.6.5"
   },
   "devDependencies": {
