--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "emailjs": "0.3.13",
     "express": "4.14.1",
     "express-session": "1.15.1",
+    "helmet": "3.22.0",
     "moment": "2.20.1",
     "moment-range": "3.1.1",
     "mongoose": "5.8.9",
