--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "args": "2.3.0",
+    "base64-stream": "1.0.0",
     "body-parser": "1.16.1",
     "chalk": "2.3.2",
     "compression": "1.6.2",
